--- a/Languages/default-chs.xml
+++ b/Languages/default-chs.xml
@@ -503,10 +503,14 @@
 				<item id="ID_HELP_HOMEPAGE" text="Shareaza site(_S)"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareaza 论坛(_F)"/>
-				<!-- <item id="ID_HELP_UPDATE" text="最新消息"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="最新消息"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 			</menu>
+			<separator/>
+			<item id="ID_HELP_UPDATE" text="最新消息"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="关于 Shareaza(_A)..."/>
 		</menu>
@@ -594,10 +598,14 @@
 				<item id="ID_HELP_HOMEPAGE" text="Shareaza site(_S)"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareaza 论坛(_F)"/>
-				<!-- <item id="ID_HELP_UPDATE" text="最新消息"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="最新消息"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 			</menu>
+			<separator/>
+			<item id="ID_VERSION_CHECK" text="最新消息"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="关于 Shareaza(_A)..."/>
 		</menu>
@@ -679,10 +687,14 @@
 				<item id="ID_HELP_HOMEPAGE" text="Shareaza site(_S)"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareaza 论坛(_F)"/>
-				<!-- <item id="ID_HELP_UPDATE" text="最新消息"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="最新消息"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 			</menu>
+			<separator/>
+			<item id="ID_HELP_VERSION_CHECK" text="最新消息"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="关于 Shareaza(_A)..."/>
 		</menu>
