--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Default English Skin File -->
-<!-- Translation based on default-en.xml SVN rev.7350 -->
+<!-- Translation based on default-en.xml SVN rev.7405 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -542,7 +542,9 @@
 			<item id="ID_HELP_HOMEPAGE" text="_Site do Shareaza"/>
 			<separator/>
 			<item id="ID_HELP_FORUMS" text="Fóruns do _Shareaza"/>
-			<!-- <item id="ID_HELP_UPDATE" text="Últimas notícias"/>
+				<item id="ID_HELP_WEB_6" text="S_kinSite do Shareaza"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="Últimas notícias"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 		  </menu>
@@ -641,7 +643,9 @@
 			<item id="ID_HELP_HOMEPAGE" text="Site do Shareaza"/>
 			<separator/>
 			<item id="ID_HELP_FORUMS" text="Fóruns do _Shareaza"/>
-			<!-- <item id="ID_HELP_UPDATE" text="Últimas notícias"/>
+				<item id="ID_HELP_WEB_6" text="S_kinSite do Shareaza"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="Últimas notícias"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 		  </menu>
@@ -733,7 +737,9 @@
 			<item id="ID_HELP_HOMEPAGE" text="Site do Shareaza"/>
 			<separator/>
 			<item id="ID_HELP_FORUMS" text="Fóruns do _Shareaza"/>
-			<!-- <item id="ID_HELP_UPDATE" text="Últimas notícias"/>
+				<item id="ID_HELP_WEB_6" text="S_kinSite do Shareaza"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="Últimas notícias"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 		  </menu>
