--- a/Languages/default-tr.xml
+++ b/Languages/default-tr.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Default Turkish Skin File -->
-<!-- Translation based on default-en.xml SVN rev.7350 -->
+<!-- Translation based on default-en.xml SVN rev.7405 -->
 
 <!-- This skin basically represents the current Shareaza defaults. You can use this file as -->
 <!-- a basis for creating new skins, however in a new skin be sure to ONLY include the sections -->
@@ -540,7 +540,9 @@
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza Sitesi"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareaza _Forumları"/>
-				<!-- <item id="ID_HELP_UPDATE" text="Son Haberler"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Sitesi"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="Son Haberler"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>	-->
 			</menu>
@@ -639,7 +641,9 @@
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza sitesi"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareaza _Forumları"/>
-				<!-- <item id="ID_HELP_UPDATE" text="Son Haberler"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Sitesi"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="Son Haberler"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>	-->
 			</menu>
@@ -731,7 +735,9 @@
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza sitesi"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareaza _Forumları"/>
-				<!-- <item id="ID_HELP_UPDATE" text="Son Haberler"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Sitesi"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="Son Haberler"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>	-->
 			</menu>
