--- a/Languages/default-heb.xml
+++ b/Languages/default-heb.xml
@@ -551,7 +551,9 @@ PDF
 				<item id="ID_HELP_HOMEPAGE" text="‪_אתר הבית של שרזה"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="‪_פורומים של שרזה"/>
-				<!-- <item id="ID_HELP_UPDATE" text="‪חדשות אחרונות"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="‪חדשות אחרונות"/>
 				<item id="ID_HELP_WEB_1" text="‪Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="‪P2PForums.com"/> -->
 			</menu>
@@ -650,7 +652,9 @@ PDF
 				<item id="ID_HELP_HOMEPAGE" text="‪_אתר הבית של שרזה"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="_פורומים של שרזה"/>
-				<!-- <item id="ID_HELP_UPDATE" text="‪חדשות אחרונות"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="‪חדשות אחרונות"/>
 				<item id="ID_HELP_WEB_1" text="‪Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="‪P2PForums.com"/> -->
 			</menu>
@@ -742,7 +746,9 @@ PDF
 				<item id="ID_HELP_HOMEPAGE" text="‪_אתר הבית של שרזה"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="‪_פורומים של שרזה"/>
-				<!-- <item id="ID_HELP_UPDATE" text="‪חדשות אחרונות"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="‪חדשות אחרונות"/>
 				<item id="ID_HELP_WEB_1" text="‪Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="‪P2PForums.com"/> -->
 			</menu>
