--- a/Languages/default-hu.xml
+++ b/Languages/default-hu.xml
@@ -541,7 +541,9 @@
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza hivatalos honlap"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareaza hivatalos _fórum"/>
-				<!-- <item id="ID_HELP_UPDATE" text="Latest news"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="Latest news"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 			</menu>
@@ -640,7 +642,9 @@
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza hivatalos honlap"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareaza hivatalos _fórum"/>
-				<!-- <item id="ID_HELP_UPDATE" text="Latest news"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="Latest news"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 			</menu>
@@ -732,7 +736,9 @@
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza hivatalos honlap"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareaza hivatalos _fórum"/>
-				<!-- <item id="ID_HELP_UPDATE" text="Latest news"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="Latest news"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/> -->
 			</menu>
