--- a/Languages/default-ja.xml
+++ b/Languages/default-ja.xml
@@ -502,10 +502,14 @@
 				<item id="ID_HELP_HOMEPAGE" text="Shareaza site(_S)"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareazaフォーラム(_F)"/>
-				<!-- <item id="ID_HELP_UPDATE" text="最新ニュース"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="最新ニュース"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>	-->
 			</menu>
+			<separator/>
+			<item id="ID_HELP_VERSION_CHECK" text="最新ニュース"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="Shareazaについて(_A)..."/>
 		</menu>
@@ -593,10 +597,14 @@
 				<item id="ID_HELP_HOMEPAGE" text="Shareaza site(_S)"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareazaフォーラム(_F)"/>
-				<!-- <item id="ID_HELP_UPDATE" text="最新ニュース"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="最新ニュース"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>	-->
 			</menu>
+			<separator/>
+			<item id="ID_HELP_VERSION_CHECK" text="最新ニュース"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="Shareazaについて(_A)..."/>
 		</menu>
@@ -682,10 +690,14 @@
 				<item id="ID_HELP_HOMEPAGE" text="Shareaza site(_S)"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Shareazaフォーラム(_F)"/>
-				<!-- <item id="ID_HELP_UPDATE" text="最新ニュース"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!-- 
+				<item id="ID_HELP_UPDATE" text="最新ニュース"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>	-->
 			</menu>
+			<separator/>
+			<item id="ID_HELP_VERSION_CHECK" text="最新ニュース"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="Shareazaについて(_A)..."/>
 		</menu>
