--- a/Languages/default-pl.xml
+++ b/Languages/default-pl.xml
@@ -485,13 +485,17 @@
 			</menu>
 			<separator/>
 			<menu text="Strony www">
-				<item id="ID_HELP_HOMEPAGE" text="Shareaza site"/>
+				<item id="ID_HELP_HOMEPAGE" text="Shareaza Site"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Forum Shareazy"/>
-				<!-- <item id="ID_HELP_UPDATE" text="Latest news"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!--
+				<item id="ID_HELP_UPDATE" text="Najświeższe wiadomości"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>	-->
 			</menu>
+			<separator/>
+			<item id="ID_HELP_VERSION_CHECK" text="Check _Version"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="O programie..."/>
 		</menu>
@@ -579,10 +583,14 @@
 				<item id="ID_HELP_HOMEPAGE" text="Shareaza site"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Forum Shareazy"/>
-				<!-- <item id="ID_HELP_UPDATE" text="Latest news"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!--
+				<item id="ID_HELP_UPDATE" text="Najświeższe wiadomości"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>	-->
 			</menu>
+			<separator/>
+			<item id="ID_HELP_VERSION_CHECK" text="Check _Version"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="O programie..."/>
 		</menu>
@@ -664,10 +672,14 @@
 				<item id="ID_HELP_HOMEPAGE" text="Shareaza site"/>
 				<separator/>
 				<item id="ID_HELP_FORUMS" text="Forum Shareazy"/>
-				<!-- <item id="ID_HELP_UPDATE" text="Najświeższe wiadomości"/>
+				<item id="ID_HELP_WEB_6" text="Shareaza S_kin Site"/>
+				<item id="ID_HELP_FAKESHAREAZA" text="FakeShareaza_.com"/> <!--
+				<item id="ID_HELP_UPDATE" text="Najświeższe wiadomości"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>	-->
 			</menu>
+			<separator/>
+			<item id="ID_HELP_VERSION_CHECK" text="Check _Version"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="O Shareazie..."/>
 		</menu>
